compiler/testData/diagnostics/tests/inference/recursiveLocalFuns/recursiveFun.kt
// IGNORE_IF_NEW_INFERENCE_ENABLED

fun foo() {
    fun bar() = (fun() = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!><!DEBUG_INFO_MISSING_UNRESOLVED!>bar<!>()<!>)
}
